--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:api": "bash -c 'source venv/Scripts/activate && python api/flows_api.py'",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@duckdb/duckdb-wasm": "^1.33.1-dev18.0",
     "@turf/turf": "^7.2.0",
     "@vis.gl/react-maplibre": "^8.1.0",
+    "lucide-react": "^0.555.0",
     "maplibre-gl": "^5.8.0",
+    "parquetjs-lite": "^0.8.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
