--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,20 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "vite",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./src ./public ./index.html ./package.json ./vite.config.ts"
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./src ./public ./index.html ./package.json ./vite.config.ts",
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cross-Origin-Embedder-Policy",
+          "value": "require-corp"
+        },
+        {
+          "key": "Cross-Origin-Opener-Policy",
+          "value": "same-origin"
+        }
+      ]
+    }
+  ]
 }
