--- a/.vercelignore
+++ b/.vercelignore
@@ -1,5 +1,6 @@
 # Python files
-*.py
+
+\*.py
 **pycache**/
 venv/
 requirements.txt
@@ -7,19 +8,18 @@ api/
 scripts/
 
 # Data files
-/data/
-*.parquet
-# Permitir CSVs minificados do public/data/lookup/
-*.csv
-!public/data/lookup/*.csv
-# Permitir GeoJSONs necessários
-*.geojson
-!public/*.geojson
+
+data/
+_.parquet
+_.csv
+\*.geojson
 
 # Config files
+
 config.yaml
-*.cjs
+\*.cjs
 
 # Documentation
-*.md
+
+\*.md
 !README.md
